
[TestConvertTypeAnn/primitive_any - 1]
&ast.AnyTypeAnn{
    span: 0-3,
}
---

[TestConvertTypeAnn/primitive_unknown - 1]
&ast.UnknownTypeAnn{
    span: 0-7,
}
---

[TestConvertTypeAnn/primitive_void - 1]
&ast.LitTypeAnn{
    Lit: &ast.UndefinedLit{
        span: 0-4,
    },
    span: 0-4,
}
---

[TestConvertTypeAnn/primitive_never - 1]
&ast.NeverTypeAnn{
    span: 0-5,
}
---

[TestConvertTypeAnn/primitive_string - 1]
&ast.StringTypeAnn{
    span: 0-6,
}
---

[TestConvertTypeAnn/primitive_number - 1]
&ast.NumberTypeAnn{
    span: 0-6,
}
---

[TestConvertTypeAnn/primitive_boolean - 1]
&ast.BooleanTypeAnn{
    span: 0-7,
}
---

[TestConvertTypeAnn/primitive_bigint - 1]
&ast.BigintTypeAnn{
    span: 0-6,
}
---

[TestConvertTypeAnn/primitive_symbol - 1]
&ast.SymbolTypeAnn{
    span: 0-6,
}
---

[TestConvertTypeAnn/primitive_object - 1]
&ast.ObjectTypeAnn{
    Inexact: true,
    span: 0-6,
}
---

[TestConvertTypeAnn/string_literal - 1]
&ast.LitTypeAnn{
    Lit: &ast.StrLit{
        Value: "hello",
        span: 0-7,
    },
    span: 0-7,
}
---

[TestConvertTypeAnn/number_literal - 1]
&ast.LitTypeAnn{
    Lit: &ast.NumLit{
        Value: 42,
        span: 0-2,
    },
    span: 0-2,
}
---

[TestConvertTypeAnn/negative_number_literal - 1]
&ast.LitTypeAnn{
    Lit: &ast.NumLit{
        Value: -3.14,
        span: 0-5,
    },
    span: 0-5,
}
---

[TestConvertTypeAnn/boolean_literal_true - 1]
&ast.LitTypeAnn{
    Lit: &ast.BoolLit{
        Value: true,
        span: 0-4,
    },
    span: 0-4,
}
---

[TestConvertTypeAnn/boolean_literal_false - 1]
&ast.LitTypeAnn{
    Lit: &ast.BoolLit{
        span: 0-5,
    },
    span: 0-5,
}
---

[TestConvertTypeAnn/simple_type_reference - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "Foo",
        span: 0-3,
    },
    span: 0-3,
}
---

[TestConvertTypeAnn/type_reference_with_one_arg - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "Array",
        span: 0-5,
    },
    TypeArgs: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 6-12,
        },
    },
    span: 0-13,
}
---

[TestConvertTypeAnn/type_reference_with_multiple_args - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "Map",
        span: 0-3,
    },
    TypeArgs: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 4-10,
        },
        &ast.NumberTypeAnn{
            span: 12-18,
        },
    },
    span: 0-19,
}
---

[TestConvertTypeAnn/qualified_type_reference - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "Foo",
            span: 0-3,
        },
        Right: &ast.Ident{
            Name: "Bar",
            span: 4-7,
        },
    },
    span: 0-7,
}
---

[TestConvertTypeAnn/nested_qualified_type_reference - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Member{
            Left: &ast.Ident{
                Name: "A",
                span: 0-1,
            },
            Right: &ast.Ident{
                Name: "B",
                span: 2-3,
            },
        },
        Right: &ast.Ident{
            Name: "C",
            span: 4-5,
        },
    },
    span: 0-5,
}
---

[TestConvertTypeAnn/qualified_with_type_args - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "Foo",
            span: 0-3,
        },
        Right: &ast.Ident{
            Name: "Bar",
            span: 4-7,
        },
    },
    TypeArgs: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "T",
                span: 8-9,
            },
            span: 8-9,
        },
    },
    span: 0-10,
}
---

[TestConvertTypeAnn/array_type - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "Array",
        span: 0-8,
    },
    TypeArgs: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 0-6,
        },
    },
    span: 0-8,
}
---

[TestConvertTypeAnn/array_of_array - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "Array",
        span: 0-10,
    },
    TypeArgs: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Array",
                span: 0-8,
            },
            TypeArgs: []ast.TypeAnn{
                &ast.NumberTypeAnn{
                    span: 0-6,
                },
            },
            span: 0-8,
        },
    },
    span: 0-10,
}
---

[TestConvertTypeAnn/readonly_array - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "ReadonlyArray",
        span: 0-17,
    },
    TypeArgs: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 9-15,
        },
    },
    span: 0-17,
}
---

[TestConvertTypeAnn/simple_tuple - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1-7,
        },
        &ast.NumberTypeAnn{
            span: 9-15,
        },
    },
    span: 0-16,
}
---

[TestConvertTypeAnn/tuple_with_one_element - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.BooleanTypeAnn{
            span: 1-8,
        },
    },
    span: 0-9,
}
---

[TestConvertTypeAnn/tuple_with_three_elements - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1-7,
        },
        &ast.NumberTypeAnn{
            span: 9-15,
        },
        &ast.BooleanTypeAnn{
            span: 17-24,
        },
    },
    span: 0-25,
}
---

[TestConvertTypeAnn/empty_tuple - 1]
&ast.TupleTypeAnn{
    span: 0-2,
}
---

[TestConvertTypeAnn/tuple_with_rest_element - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1-7,
        },
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Array",
                    span: 12-20,
                },
                TypeArgs: []ast.TypeAnn{
                    &ast.NumberTypeAnn{
                        span: 12-18,
                    },
                },
                span: 12-20,
            },
            span: 9-20,
        },
    },
    span: 0-21,
}
---

[TestConvertTypeAnn/union_of_two_types - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 0-6,
        },
        &ast.NumberTypeAnn{
            span: 9-15,
        },
    },
    span: 0-15,
}
---

[TestConvertTypeAnn/union_of_three_types - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 0-6,
        },
        &ast.NumberTypeAnn{
            span: 9-15,
        },
        &ast.BooleanTypeAnn{
            span: 18-25,
        },
    },
    span: 0-25,
}
---

[TestConvertTypeAnn/union_with_null - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 0-6,
        },
        &ast.LitTypeAnn{
            Lit: &ast.NullLit{
                span: 9-13,
            },
            span: 9-13,
        },
    },
    span: 0-13,
}
---

[TestConvertTypeAnn/union_with_undefined - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.NumberTypeAnn{
            span: 0-6,
        },
        &ast.LitTypeAnn{
            Lit: &ast.UndefinedLit{
                span: 9-18,
            },
            span: 9-18,
        },
    },
    span: 0-18,
}
---

[TestConvertTypeAnn/intersection_of_two_types - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Foo",
                span: 0-3,
            },
            span: 0-3,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Bar",
                span: 6-9,
            },
            span: 6-9,
        },
    },
    span: 0-9,
}
---

[TestConvertTypeAnn/intersection_of_three_types - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "A",
                span: 0-1,
            },
            span: 0-1,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "B",
                span: 4-5,
            },
            span: 4-5,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "C",
                span: 8-9,
            },
            span: 8-9,
        },
    },
    span: 0-9,
}
---

[TestConvertTypeAnn/intersection_with_object_types - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.ObjectTypeAnn{
            Elems: []ast.ObjTypeAnnElem{
                &ast.PropertyTypeAnn{
                    Name: &ast.IdentExpr{
                        Name: "a",
                        span: 1-2,
                    },
                    Value: &ast.StringTypeAnn{
                        span: 4-10,
                    },
                    elemSpan: ast.elemSpan{
                        span: 1-10,
                    },
                },
            },
            span: 0-11,
        },
        &ast.ObjectTypeAnn{
            Elems: []ast.ObjTypeAnnElem{
                &ast.PropertyTypeAnn{
                    Name: &ast.IdentExpr{
                        Name: "b",
                        span: 15-16,
                    },
                    Value: &ast.NumberTypeAnn{
                        span: 18-24,
                    },
                    elemSpan: ast.elemSpan{
                        span: 15-24,
                    },
                },
            },
            span: 14-25,
        },
    },
    span: 0-25,
}
---

[TestConvertTypeAnn/simple_function - 1]
&ast.FuncTypeAnn{
    Return: &ast.UnknownTypeAnn{
        span: 6-10,
    },
    span: 0-10,
}
---

[TestConvertTypeAnn/function_with_one_param - 1]
&ast.FuncTypeAnn{
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 1-10,
            },
            TypeAnn: &ast.NumberTypeAnn{
                span: 4-10,
            },
        },
    },
    Return: &ast.StringTypeAnn{
        span: 15-21,
    },
    span: 0-21,
}
---

[TestConvertTypeAnn/function_with_multiple_params - 1]
&ast.FuncTypeAnn{
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 1-10,
            },
            TypeAnn: &ast.NumberTypeAnn{
                span: 4-10,
            },
        },
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "y",
                span: 12-21,
            },
            TypeAnn: &ast.StringTypeAnn{
                span: 15-21,
            },
        },
    },
    Return: &ast.BooleanTypeAnn{
        span: 26-33,
    },
    span: 0-33,
}
---

[TestConvertTypeAnn/function_with_optional_param - 1]
&ast.FuncTypeAnn{
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 1-11,
            },
            Optional: true,
            TypeAnn: &ast.NumberTypeAnn{
                span: 5-11,
            },
        },
    },
    Return: &ast.UnknownTypeAnn{
        span: 16-20,
    },
    span: 0-20,
}
---

[TestConvertTypeAnn/function_with_rest_param - 1]
&ast.FuncTypeAnn{
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.RestPat{
                Pattern: &ast.IdentPat{
                    Name: "args",
                    span: 1-18,
                },
                span: 1-18,
            },
            TypeAnn: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Array",
                    span: 10-18,
                },
                TypeArgs: []ast.TypeAnn{
                    &ast.StringTypeAnn{
                        span: 10-16,
                    },
                },
                span: 10-18,
            },
        },
    },
    Return: &ast.UnknownTypeAnn{
        span: 23-27,
    },
    span: 0-27,
}
---

[TestConvertTypeAnn/function_with_type_params - 1]
&ast.FuncTypeAnn{
    TypeParams: []*ast.TypeParam{
        &ast.TypeParam{
            Name: "T",
            span: 1-2,
        },
    },
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 4-8,
            },
            TypeAnn: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 7-8,
                },
                span: 7-8,
            },
        },
    },
    Return: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 13-14,
        },
        span: 13-14,
    },
    span: 0-14,
}
---

[TestConvertTypeAnn/function_with_constrained_type_param - 1]
&ast.FuncTypeAnn{
    TypeParams: []*ast.TypeParam{
        &ast.TypeParam{
            Name: "T",
            Constraint: &ast.StringTypeAnn{
                span: 11-17,
            },
            span: 1-17,
        },
    },
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 19-23,
            },
            TypeAnn: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 22-23,
                },
                span: 22-23,
            },
        },
    },
    Return: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 28-29,
        },
        span: 28-29,
    },
    span: 0-29,
}
---

[TestConvertTypeAnn/simple_constructor - 1]
&ast.FuncTypeAnn{
    Return: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "Foo",
            span: 10-13,
        },
        span: 10-13,
    },
    span: 0-13,
}
---

[TestConvertTypeAnn/constructor_with_params - 1]
&ast.FuncTypeAnn{
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 5-14,
            },
            TypeAnn: &ast.NumberTypeAnn{
                span: 8-14,
            },
        },
    },
    Return: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "Bar",
            span: 19-22,
        },
        span: 19-22,
    },
    span: 0-22,
}
---

[TestConvertTypeAnn/abstract_constructor - 1]
&ast.FuncTypeAnn{
    Return: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "Baz",
            span: 19-22,
        },
        span: 19-22,
    },
    span: 0-22,
}
---

[TestConvertTypeAnn/empty_object - 1]
&ast.ObjectTypeAnn{
    span: 0-2,
}
---

[TestConvertTypeAnn/object_with_one_property - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "name",
                span: 1-5,
            },
            Value: &ast.StringTypeAnn{
                span: 7-13,
            },
            elemSpan: ast.elemSpan{
                span: 1-13,
            },
        },
    },
    span: 0-14,
}
---

[TestConvertTypeAnn/object_with_multiple_properties - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "name",
                span: 1-5,
            },
            Value: &ast.StringTypeAnn{
                span: 7-13,
            },
            elemSpan: ast.elemSpan{
                span: 1-13,
            },
        },
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "age",
                span: 15-18,
            },
            Value: &ast.NumberTypeAnn{
                span: 20-26,
            },
            elemSpan: ast.elemSpan{
                span: 15-26,
            },
        },
    },
    span: 0-27,
}
---

[TestConvertTypeAnn/object_with_optional_property - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "name",
                span: 1-5,
            },
            Optional: true,
            Value: &ast.StringTypeAnn{
                span: 8-14,
            },
            elemSpan: ast.elemSpan{
                span: 1-14,
            },
        },
    },
    span: 0-15,
}
---

[TestConvertTypeAnn/object_with_readonly_property - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "id",
                span: 10-12,
            },
            Readonly: true,
            Value: &ast.NumberTypeAnn{
                span: 14-20,
            },
            elemSpan: ast.elemSpan{
                span: 10-20,
            },
        },
    },
    span: 0-21,
}
---

[TestConvertTypeAnn/simple_indexed_access - 1]
&ast.IndexTypeAnn{
    Target: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 0-1,
        },
        span: 0-1,
    },
    Index: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "K",
            span: 2-3,
        },
        span: 2-3,
    },
    span: 0-4,
}
---

[TestConvertTypeAnn/indexed_with_string_literal - 1]
&ast.IndexTypeAnn{
    Target: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 0-1,
        },
        span: 0-1,
    },
    Index: &ast.LitTypeAnn{
        Lit: &ast.StrLit{
            Value: "name",
            span: 2-8,
        },
        span: 2-8,
    },
    span: 0-9,
}
---

[TestConvertTypeAnn/indexed_with_number_literal - 1]
&ast.IndexTypeAnn{
    Target: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 0-1,
        },
        span: 0-1,
    },
    Index: &ast.LitTypeAnn{
        Lit: &ast.NumLit{
            span: 2-3,
        },
        span: 2-3,
    },
    span: 0-4,
}
---

[TestConvertTypeAnn/nested_indexed_access - 1]
&ast.IndexTypeAnn{
    Target: &ast.IndexTypeAnn{
        Target: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "T",
                span: 0-1,
            },
            span: 0-1,
        },
        Index: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "K",
                span: 2-3,
            },
            span: 2-3,
        },
        span: 0-4,
    },
    Index: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "P",
            span: 5-6,
        },
        span: 5-6,
    },
    span: 0-7,
}
---

[TestConvertTypeAnn/simple_conditional - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 0-1,
        },
        span: 0-1,
    },
    Extends: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "U",
            span: 10-11,
        },
        span: 10-11,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "X",
            span: 14-15,
        },
        span: 14-15,
    },
    Else: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "Y",
            span: 18-19,
        },
        span: 18-19,
    },
    span: 0-19,
}
---

[TestConvertTypeAnn/conditional_with_primitives - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 0-1,
        },
        span: 0-1,
    },
    Extends: &ast.StringTypeAnn{
        span: 10-16,
    },
    Then: &ast.LitTypeAnn{
        Lit: &ast.BoolLit{
            Value: true,
            span: 19-23,
        },
        span: 19-23,
    },
    Else: &ast.LitTypeAnn{
        Lit: &ast.BoolLit{
            span: 26-31,
        },
        span: 26-31,
    },
    span: 0-31,
}
---

[TestConvertTypeAnn/nested_conditional - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 0-1,
        },
        span: 0-1,
    },
    Extends: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "U",
            span: 10-11,
        },
        span: 10-11,
    },
    Then: &ast.CondTypeAnn{
        Check: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "X",
                span: 15-16,
            },
            span: 15-16,
        },
        Extends: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Y",
                span: 25-26,
            },
            span: 25-26,
        },
        Then: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "A",
                span: 29-30,
            },
            span: 29-30,
        },
        Else: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "B",
                span: 33-34,
            },
            span: 33-34,
        },
        span: 15-34,
    },
    Else: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "Z",
            span: 38-39,
        },
        span: 38-39,
    },
    span: 0-39,
}
---

[TestConvertTypeAnn/infer_in_conditional - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 0-1,
        },
        span: 0-1,
    },
    Extends: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "Array",
            span: 10-15,
        },
        TypeArgs: []ast.TypeAnn{
            &ast.InferTypeAnn{
                Name: "U",
                span: 16-23,
            },
        },
        span: 10-24,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "U",
            span: 27-28,
        },
        span: 27-28,
    },
    Else: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 31-32,
        },
        span: 31-32,
    },
    span: 0-32,
}
---

[TestConvertTypeAnn/multiple_infer - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 0-1,
        },
        span: 0-1,
    },
    Extends: &ast.FuncTypeAnn{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "arg",
                    span: 11-23,
                },
                TypeAnn: &ast.InferTypeAnn{
                    Name: "A",
                    span: 16-23,
                },
            },
        },
        Return: &ast.InferTypeAnn{
            Name: "R",
            span: 28-35,
        },
        span: 10-35,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "R",
            span: 38-39,
        },
        span: 38-39,
    },
    Else: &ast.NeverTypeAnn{
        span: 42-47,
    },
    span: 0-47,
}
---

[TestConvertTypeAnn/simple_template_literal - 1]
&ast.TemplateLitTypeAnn{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "hello",
            Span: 1-6,
        },
    },
    span: 0-7,
}
---

[TestConvertTypeAnn/template_with_one_substitution - 1]
&ast.TemplateLitTypeAnn{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "hello ",
            Span: 1-7,
        },
        &ast.Quasi{
            Span: 0-17,
        },
    },
    TypeAnns: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 9-15,
        },
    },
    span: 0-17,
}
---

[TestConvertTypeAnn/template_with_multiple_substitutions - 1]
&ast.TemplateLitTypeAnn{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Span: 1-10,
        },
        &ast.Quasi{
            Value: "-",
            Span: 10-11,
        },
        &ast.Quasi{
            Span: 0-21,
        },
    },
    TypeAnns: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 3-9,
        },
        &ast.NumberTypeAnn{
            span: 13-19,
        },
    },
    span: 0-21,
}
---

[TestConvertTypeAnn/simple_keyof - 1]
&ast.KeyOfTypeAnn{
    Type: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 6-7,
        },
        span: 6-7,
    },
    span: 0-7,
}
---

[TestConvertTypeAnn/keyof_object - 1]
&ast.KeyOfTypeAnn{
    Type: &ast.ObjectTypeAnn{
        Elems: []ast.ObjTypeAnnElem{
            &ast.PropertyTypeAnn{
                Name: &ast.IdentExpr{
                    Name: "a",
                    span: 7-8,
                },
                Value: &ast.StringTypeAnn{
                    span: 10-16,
                },
                elemSpan: ast.elemSpan{
                    span: 7-16,
                },
            },
            &ast.PropertyTypeAnn{
                Name: &ast.IdentExpr{
                    Name: "b",
                    span: 18-19,
                },
                Value: &ast.NumberTypeAnn{
                    span: 21-27,
                },
                elemSpan: ast.elemSpan{
                    span: 18-27,
                },
            },
        },
        span: 6-28,
    },
    span: 0-28,
}
---

[TestConvertTypeAnn/typeof_identifier - 1]
&ast.TypeOfTypeAnn{
    Value: &ast.Ident{
        Name: "foo",
        span: 7-10,
    },
    span: 0-10,
}
---

[TestConvertTypeAnn/typeof_qualified - 1]
&ast.TypeOfTypeAnn{
    Value: &ast.Member{
        Left: &ast.Ident{
            Name: "Foo",
            span: 7-10,
        },
        Right: &ast.Ident{
            Name: "bar",
            span: 11-14,
        },
    },
    span: 0-14,
}
---

[TestConvertTypeAnn/import_type - 1]
&ast.ImportTypeAnn{
    Source: "module",
    span: 0-16,
}
---

[TestConvertTypeAnn/import_type_with_member - 1]
&ast.ImportTypeAnn{
    Source: "module",
    Qualifier: &ast.Ident{
        Name: "Foo",
        span: 17-20,
    },
    span: 0-20,
}
---

[TestConvertTypeAnn/import_type_with_type_args - 1]
&ast.ImportTypeAnn{
    Source: "module",
    Qualifier: &ast.Ident{
        Name: "Foo",
        span: 17-20,
    },
    TypeArgs: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "T",
                span: 21-22,
            },
            span: 21-22,
        },
    },
    span: 0-23,
}
---

[TestConvertTypeAnn/type_predicate - 1]
&ast.FuncTypeAnn{
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 1-7,
            },
            TypeAnn: &ast.AnyTypeAnn{
                span: 4-7,
            },
        },
    },
    Return: &ast.BooleanTypeAnn{
        span: 12-23,
    },
    span: 0-23,
}
---

[TestConvertTypeAnn/rest_type_in_tuple - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Array",
                    span: 4-12,
                },
                TypeArgs: []ast.TypeAnn{
                    &ast.StringTypeAnn{
                        span: 4-10,
                    },
                },
                span: 4-12,
            },
            span: 1-12,
        },
    },
    span: 0-13,
}
---

[TestConvertTypeAnn/optional_type_in_tuple - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 1-7,
        },
    },
    span: 0-9,
}
---

[TestConvertTypeAnn/union_of_functions - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.FuncTypeAnn{
            Return: &ast.StringTypeAnn{
                span: 7-13,
            },
            span: 1-13,
        },
        &ast.FuncTypeAnn{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "x",
                        span: 19-28,
                    },
                    TypeAnn: &ast.NumberTypeAnn{
                        span: 22-28,
                    },
                },
            },
            Return: &ast.BooleanTypeAnn{
                span: 33-40,
            },
            span: 18-40,
        },
    },
    span: 0-41,
}
---

[TestConvertTypeAnn/array_of_union - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "Array",
        span: 0-19,
    },
    TypeArgs: []ast.TypeAnn{
        &ast.UnionTypeAnn{
            Types: []ast.TypeAnn{
                &ast.StringTypeAnn{
                    span: 1-7,
                },
                &ast.NumberTypeAnn{
                    span: 10-16,
                },
            },
            span: 1-16,
        },
    },
    span: 0-19,
}
---

[TestConvertTypeAnn/union_of_arrays - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Array",
                span: 0-8,
            },
            TypeArgs: []ast.TypeAnn{
                &ast.StringTypeAnn{
                    span: 0-6,
                },
            },
            span: 0-8,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Array",
                span: 11-19,
            },
            TypeArgs: []ast.TypeAnn{
                &ast.NumberTypeAnn{
                    span: 11-17,
                },
            },
            span: 11-19,
        },
    },
    span: 0-19,
}
---

[TestConvertTypeAnn/function_returning_union - 1]
&ast.FuncTypeAnn{
    Return: &ast.UnionTypeAnn{
        Types: []ast.TypeAnn{
            &ast.StringTypeAnn{
                span: 6-12,
            },
            &ast.NumberTypeAnn{
                span: 15-21,
            },
        },
        span: 6-21,
    },
    span: 0-21,
}
---

[TestConvertTypeAnn/conditional_with_union - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 0-1,
        },
        span: 0-1,
    },
    Extends: &ast.UnionTypeAnn{
        Types: []ast.TypeAnn{
            &ast.StringTypeAnn{
                span: 10-16,
            },
            &ast.NumberTypeAnn{
                span: 19-25,
            },
        },
        span: 10-25,
    },
    Then: &ast.LitTypeAnn{
        Lit: &ast.BoolLit{
            Value: true,
            span: 28-32,
        },
        span: 28-32,
    },
    Else: &ast.LitTypeAnn{
        Lit: &ast.BoolLit{
            span: 35-40,
        },
        span: 35-40,
    },
    span: 0-40,
}
---

[TestConvertTypeAnn/indexed_access_of_union - 1]
&ast.IndexTypeAnn{
    Target: &ast.UnionTypeAnn{
        Types: []ast.TypeAnn{
            &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "A",
                    span: 1-2,
                },
                span: 1-2,
            },
            &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "B",
                    span: 5-6,
                },
                span: 5-6,
            },
        },
        span: 1-6,
    },
    Index: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "K",
            span: 8-9,
        },
        span: 8-9,
    },
    span: 0-10,
}
---

[TestConvertTypeAnn/generic_with_multiple_constraints - 1]
&ast.FuncTypeAnn{
    TypeParams: []*ast.TypeParam{
        &ast.TypeParam{
            Name: "T",
            Constraint: &ast.StringTypeAnn{
                span: 11-17,
            },
            span: 1-17,
        },
        &ast.TypeParam{
            Name: "U",
            Constraint: &ast.NumberTypeAnn{
                span: 29-35,
            },
            span: 19-35,
        },
    },
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 37-41,
            },
            TypeAnn: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 40-41,
                },
                span: 40-41,
            },
        },
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "y",
                span: 43-47,
            },
            TypeAnn: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 46-47,
                },
                span: 46-47,
            },
        },
    },
    Return: &ast.UnknownTypeAnn{
        span: 52-56,
    },
    span: 0-56,
}
---

[TestConvertTypeAnn/simple_mapped_type - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 7-8,
                    },
                    span: 7-8,
                },
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 11-12,
                },
                span: 11-12,
            },
            elemSpan: ast.elemSpan{
                span: 0-13,
            },
        },
    },
    span: 0-13,
}
---

[TestConvertTypeAnn/mapped_type_with_readonly - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 16-17,
                    },
                    span: 16-17,
                },
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 20-21,
                },
                span: 20-21,
            },
            ReadOnly: &"add",
            elemSpan: ast.elemSpan{
                span: 0-22,
            },
        },
    },
    span: 0-22,
}
---

[TestConvertTypeAnn/mapped_type_with_optional - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 7-8,
                    },
                    span: 7-8,
                },
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 12-13,
                },
                span: 12-13,
            },
            Optional: &"add",
            elemSpan: ast.elemSpan{
                span: 0-14,
            },
        },
    },
    span: 0-14,
}
---

[TestConvertTypeAnn/mapped_type_with_readonly_and_optional - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 16-17,
                    },
                    span: 16-17,
                },
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 21-22,
                },
                span: 21-22,
            },
            Optional: &"add",
            ReadOnly: &"add",
            elemSpan: ast.elemSpan{
                span: 0-23,
            },
        },
    },
    span: 0-23,
}
---

[TestConvertTypeAnn/mapped_type_with_remove_readonly - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 17-18,
                    },
                    span: 17-18,
                },
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 21-22,
                },
                span: 21-22,
            },
            ReadOnly: &"remove",
            elemSpan: ast.elemSpan{
                span: 0-23,
            },
        },
    },
    span: 0-23,
}
---

[TestConvertTypeAnn/mapped_type_with_remove_optional - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 7-8,
                    },
                    span: 7-8,
                },
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 13-14,
                },
                span: 13-14,
            },
            Optional: &"remove",
            elemSpan: ast.elemSpan{
                span: 0-15,
            },
        },
    },
    span: 0-15,
}
---

[TestConvertTypeAnn/mapped_type_with_as_clause - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 7-8,
                    },
                    span: 7-8,
                },
            },
            Name: &ast.TemplateLitTypeAnn{
                Quasis: []*ast.Quasi{
                    &ast.Quasi{
                        Value: "get",
                        Span: 13-16,
                    },
                    &ast.Quasi{
                        Span: 12-21,
                    },
                },
                TypeAnns: []ast.TypeAnn{
                    &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "K",
                            span: 18-19,
                        },
                        span: 18-19,
                    },
                },
                span: 12-21,
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 24-25,
                },
                span: 24-25,
            },
            elemSpan: ast.elemSpan{
                span: 0-26,
            },
        },
    },
    span: 0-26,
}
---

[TestConvertTypeAnn/this_type - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "Self",
        span: 0-4,
    },
    span: 0-4,
}
---

[TestConvertMethodDecl/simple_method - 1]
&ast.MethodElem{
    Name: &ast.IdentExpr{
        Name: "foo",
        span: 21-24,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "x",
                        span: 25-34,
                    },
                    TypeAnn: &ast.NumberTypeAnn{
                        span: 28-34,
                    },
                },
            },
            Return: &ast.StringTypeAnn{
                span: 37-43,
            },
        },
        span: 21-43,
    },
    Receiver: &ast.MethodReceiver{
        Mut: true,
        Span_: 21-43,
    },
    Span_: 21-43,
}
---

[TestConvertMethodDecl/static_method - 1]
&ast.MethodElem{
    Name: &ast.IdentExpr{
        Name: "create",
        span: 28-34,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Return: &ast.UnknownTypeAnn{
                span: 38-42,
            },
        },
        span: 28-42,
    },
    Static: true,
    Span_: 28-42,
}
---

[TestConvertMethodDecl/private_method - 1]
&ast.MethodElem{
    Name: &ast.IdentExpr{
        Name: "helper",
        span: 29-35,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Return: &ast.UnknownTypeAnn{
                span: 39-43,
            },
        },
        span: 29-43,
    },
    Receiver: &ast.MethodReceiver{
        Mut: true,
        Span_: 29-43,
    },
    Private: true,
    Span_: 29-43,
}
---

[TestConvertMethodDecl/async_method - 1]
&ast.MethodElem{
    Name: &ast.IdentExpr{
        Name: "fetchData",
        span: 27-36,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Promise",
                    span: 40-47,
                },
                TypeArgs: []ast.TypeAnn{
                    &ast.LitTypeAnn{
                        Lit: &ast.UndefinedLit{
                            span: 48-52,
                        },
                        span: 48-52,
                    },
                },
                span: 40-53,
            },
            Async: true,
        },
        span: 27-53,
    },
    Receiver: &ast.MethodReceiver{
        Mut: true,
        Span_: 27-53,
    },
    Span_: 27-53,
}
---

[TestConvertMethodDecl/method_with_type_parameters - 1]
&ast.MethodElem{
    Name: &ast.IdentExpr{
        Name: "map",
        span: 21-24,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            TypeParams: []*ast.TypeParam{
                &ast.TypeParam{
                    Name: "T",
                    span: 25-26,
                },
            },
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "fn",
                        span: 28-39,
                    },
                    TypeAnn: &ast.FuncTypeAnn{
                        Return: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "T",
                                span: 38-39,
                            },
                            span: 38-39,
                        },
                        span: 32-39,
                    },
                },
            },
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 42-43,
                },
                span: 42-43,
            },
        },
        span: 21-43,
    },
    Receiver: &ast.MethodReceiver{
        Span_: 21-43,
    },
    Span_: 21-43,
}
---

[TestConvertPropertyDecl/simple_property - 1]
&ast.FieldElem{
    Name: &ast.IdentExpr{
        Name: "count",
        span: 21-26,
    },
    Type: &ast.NumberTypeAnn{
        span: 28-34,
    },
    Span_: 21-34,
}
---

[TestConvertPropertyDecl/readonly_property - 1]
&ast.FieldElem{
    Name: &ast.IdentExpr{
        Name: "id",
        span: 30-32,
    },
    Type: &ast.StringTypeAnn{
        span: 34-40,
    },
    Readonly: true,
    Span_: 30-40,
}
---

[TestConvertPropertyDecl/static_property - 1]
&ast.FieldElem{
    Name: &ast.IdentExpr{
        Name: "version",
        span: 28-35,
    },
    Type: &ast.StringTypeAnn{
        span: 37-43,
    },
    Static: true,
    Span_: 28-43,
}
---

[TestConvertPropertyDecl/private_property - 1]
&ast.FieldElem{
    Name: &ast.IdentExpr{
        Name: "secret",
        span: 29-35,
    },
    Type: &ast.StringTypeAnn{
        span: 37-43,
    },
    Private: true,
    Span_: 29-43,
}
---

[TestConvertPropertyDecl/optional_property - 1]
&ast.FieldElem{
    Name: &ast.IdentExpr{
        Name: "description",
        span: 21-32,
    },
    Type: &ast.StringTypeAnn{
        span: 35-41,
    },
    Optional: true,
    Span_: 21-41,
}
---

[TestConvertPropertyDecl/static_readonly_property - 1]
&ast.FieldElem{
    Name: &ast.IdentExpr{
        Name: "MAX_SIZE",
        span: 37-45,
    },
    Type: &ast.NumberTypeAnn{
        span: 47-53,
    },
    Static: true,
    Readonly: true,
    Span_: 37-53,
}
---

[TestConvertGetterDecl/simple_getter - 1]
&ast.GetterElem{
    Name: &ast.IdentExpr{
        Name: "value",
        span: 25-30,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Return: &ast.NumberTypeAnn{
                span: 34-40,
            },
        },
        span: 21-40,
    },
    Receiver: &ast.MethodReceiver{
        Span_: 21-40,
    },
    Span_: 21-40,
}
---

[TestConvertGetterDecl/static_getter - 1]
&ast.GetterElem{
    Name: &ast.IdentExpr{
        Name: "instance",
        span: 32-40,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "MyClass",
                    span: 44-51,
                },
                span: 44-51,
            },
        },
        span: 28-51,
    },
    Static: true,
    Span_: 28-51,
}
---

[TestConvertGetterDecl/private_getter - 1]
&ast.GetterElem{
    Name: &ast.IdentExpr{
        Name: "internalState",
        span: 33-46,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Return: &ast.AnyTypeAnn{
                span: 50-53,
            },
        },
        span: 29-53,
    },
    Receiver: &ast.MethodReceiver{
        Span_: 29-53,
    },
    Private: true,
    Span_: 29-53,
}
---

[TestConvertSetterDecl/simple_setter - 1]
&ast.SetterElem{
    Name: &ast.IdentExpr{
        Name: "value",
        span: 25-30,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "v",
                        span: 31-40,
                    },
                    TypeAnn: &ast.NumberTypeAnn{
                        span: 34-40,
                    },
                },
            },
            Return: &ast.LitTypeAnn{
                Lit: &ast.UndefinedLit{
                    span: 21-40,
                },
                span: 21-40,
            },
        },
        span: 21-40,
    },
    Receiver: &ast.MethodReceiver{
        Mut: true,
        Span_: 21-40,
    },
    Span_: 21-40,
}
---

[TestConvertSetterDecl/static_setter - 1]
&ast.SetterElem{
    Name: &ast.IdentExpr{
        Name: "config",
        span: 32-38,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "cfg",
                        span: 39-50,
                    },
                    TypeAnn: &ast.ObjectTypeAnn{
                        Inexact: true,
                        span: 44-50,
                    },
                },
            },
            Return: &ast.LitTypeAnn{
                Lit: &ast.UndefinedLit{
                    span: 28-50,
                },
                span: 28-50,
            },
        },
        span: 28-50,
    },
    Static: true,
    Span_: 28-50,
}
---

[TestConvertSetterDecl/private_setter - 1]
&ast.SetterElem{
    Name: &ast.IdentExpr{
        Name: "data",
        span: 33-37,
    },
    Fn: &ast.FuncExpr{
        FuncSig: ast.FuncSig{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "d",
                        span: 38-44,
                    },
                    TypeAnn: &ast.AnyTypeAnn{
                        span: 41-44,
                    },
                },
            },
            Return: &ast.LitTypeAnn{
                Lit: &ast.UndefinedLit{
                    span: 29-44,
                },
                span: 29-44,
            },
        },
        span: 29-44,
    },
    Receiver: &ast.MethodReceiver{
        Mut: true,
        Span_: 29-44,
    },
    Private: true,
    Span_: 29-44,
}
---

[TestConvertTypeAnn/void_return_lowers_to_unknown - 1]
&ast.FuncTypeAnn{
    Return: &ast.UnknownTypeAnn{
        span: 6-10,
    },
    span: 0-10,
}
---

[TestConvertTypeAnn/void_type_argument_lowers_to_undefined - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Ident{
        Name: "Promise",
        span: 0-7,
    },
    TypeArgs: []ast.TypeAnn{
        &ast.LitTypeAnn{
            Lit: &ast.UndefinedLit{
                span: 8-12,
            },
            span: 8-12,
        },
    },
    span: 0-13,
}
---

[TestConvertTypeAnn/void_property_lowers_to_undefined - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "x",
                span: 2-3,
            },
            Value: &ast.LitTypeAnn{
                Lit: &ast.UndefinedLit{
                    span: 5-9,
                },
                span: 5-9,
            },
            elemSpan: ast.elemSpan{
                span: 2-9,
            },
        },
    },
    span: 0-11,
}
---

[TestConvertTypeAnn/void_param_lowers_to_undefined - 1]
&ast.FuncTypeAnn{
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 1:2-1:9,
            },
            TypeAnn: &ast.LitTypeAnn{
                Lit: &ast.UndefinedLit{
                    span: 1:5-1:9,
                },
                span: 1:5-1:9,
            },
        },
    },
    Return: &ast.NumberTypeAnn{
        span: 1:14-1:20,
    },
    span: 1:1-1:20,
}
---

[TestConvertTypeAnn/void_param_lowers_to_never - 1]
&ast.FuncTypeAnn{
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 1-8,
            },
            TypeAnn: &ast.NeverTypeAnn{
                span: 4-8,
            },
        },
    },
    Return: &ast.NumberTypeAnn{
        span: 13-19,
    },
    span: 0-19,
}
---
